[package]
name = "repcap"
version = "0.1.0"
edition = "2021"
description = "A tcpreplay like cli tool for PCAP files"
repository = "https://github.com/Lemorz56/repcap"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Lemorz56/repcap"
readme = "README.md"
keywords = ["pcap", "replay", "cli", "network", "packet"]
authors = ["Lemorz56"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
