[package]
name = "repcap"
version = "0.1.0"
edition = "2021"
description = "A tcpreplay like cli tool for PCAP files"
repository = "https://github.com/Lemorz56/repcap"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Lemorz56/repcap"
readme = "README.md"
keywords = ["pcap", "replay", "cli", "network", "packet"]
authors = ["Lemorz56"]
categories = ["command-line-utilities"]
exclude = ["target", "Cargo.lock", ".github/*", "**/*.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
indicatif = "0.17.8"
pcap = "2.0.0"
tabled = "0.16.0"
log = "0.4.22"
time = "0.3"
# might remove libc and convert all timeval to instant instead.
libc = "0.2.156"
tempfile = "3.12.0"